--- a/popup/src/pages/style.scss
+++ b/popup/src/pages/style.scss
@@ -1,7 +1,8 @@
 .popup-container {
   width: 980px;
   padding: 10px;
-  height: 300px;
+  text-align: center;
+  border: 1px solid #ccc;
 }
 
 ::-webkit-scrollbar {
